[package]
name = "accountant"
version = "0.1.0"
description = "Accounting Engine for General Journal"
edition = "2021"
default-run = "accountant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.23"
serde = { version = "1.0.149", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
juniper = "0.15.10"
