[package]
name = "accountant"
version = "0.1.0"
description = "Accounting Engine for General Journal"
edition = "2021"
default-run = "accountant"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "core", "entity", "migration"]

[dependencies]
accountant-graphql-api = { path = "api" }
accountant-core = { path = "core" }
