[package]
name = "accountant-graphql-api"
authors = ["David Badalyan <badalyandavo@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accountant-core = { path = "../core" }
