[package]
name = "accountant-graphql-api"
authors = ["David Badalyan <badalyandavo@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# accountant crates
accountant-core = { path = "../core" }
entity = { path = "../entity" }
migration = { path = "../migration" }

# runtime
tokio = { version = "1.24.1", features = ["full"] }
dotenvy = "0.15.0"
axum = "0.6.2"
async-graphql-axum = "5.0.5"
