[package]
name = "accountant-graphql-api"
authors = ["David Badalyan <badalyandavo@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# accountant crates
accountant-core = { path = "../core" }
entity = { path = "../entity" }
migration = { path = "../migration" }

# runtime
tokio = { version = "1.24.1", features = ["full"] }
dotenvy = "0.15.0"
# axum = "0.6.2"
# async-graphql-axum = "5.0.5"

juniper = "0.15.11"
# juniper = { version = "0.16.0-dev" }
serde = "1.0.152"
serde_json = "1.0.91"
strum = "0.24.1"
strum_macros = "0.24.3"
warp = "0.3.3"
juniper_warp = "0.7.0"
env_logger = "0.10"
log = "0.4"
url = "2.0"
cuid = "1.3.1"
derive_more = "0.99.17"
chrono = "0.4.24"
