[package]
name = "accountant-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.23"
futures = "0.3.25"
serde = { version = "1.0.149", features = ["derive"] }
# juniper = "0.15.10"
juniper = { git = "https://github.com/graphql-rust/juniper.git", rev = "b79b7998240a803286dc0e68f394f5a5d1c7f13c" }
sea-orm = { version = "^0.10.6", features = [
    "sqlx-sqlite",
    "runtime-async-std-native-tls",
    "macros",
] }
