[package]
name = "accountant-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuid = "1.3.1"
entity = { path = "../entity" }
# bincode = "1.3.3"
# chrono = "0.4.23"
# futures = "0.3.25"
# serde = { version = "1.0.149", features = ["derive"] }

sea-orm = { version = "^0.10.6", features = [
    "sqlx-sqlite",
    "runtime-async-std-native-tls",
    "macros",
] }
